--- a/pstc/templates/pstc/index.html
+++ b/pstc/templates/pstc/index.html
@@ -7,8 +7,9 @@
 
 {% block content %}
 <div id="content-main">
-
-  <a href="{% url 'pstc_site' %}">{% translate 'Public Salary Table Calculation' %}</a>
+  {% if user.is_staff %}
+    <a href="{% url 'masterAdmin:index' %}">{% translate 'Master Maintenance' %}</a>
+  {% endif %}
 </div>
 {% endblock %}
 
