--- a/keju/templates/keju/index.html
+++ b/keju/templates/keju/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div id="content-main">
-  <a href="{% url 'pstc_site' %}">{% translate 'Public Salary Table Calculation' %}</a>
+  <a href="{% url 'pstc-site' %}">{% translate 'Public Salary Table Calculation' %}</a>
 </div>
 {% endblock %}
 
