--- a/pstc/templates/pstc/index.html
+++ b/pstc/templates/pstc/index.html
@@ -9,7 +9,7 @@
 <div id="content-main">
   {% if user.is_staff %}
   <a href="{% url 'masterAdmin:index' %}">{% translate 'Master Maintenance' %}</a><br />
-  <a href="{% url 'import_pst' %}">{% translate 'Import Public Salary Table' %}</a><br />
+  <a href="{% url 'import-pst' %}">{% translate 'Import Public Salary Table' %}</a><br />
   {% endif %}
 </div>
 {% endblock %}
